Changes to be committed: 	modified:   .idea/gradle.xml 	modified:   .idea/vcs.xml 	modified:   app/src/main/res/layout/activity_main.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="total_to_split">Enter The Total Amount Of Money You Wish To Be Split: </string>
+    <string name="n_shares">And What Factor Do You Want To Divide The Money By: </string>
+    <string name="split_now">Split Now</string>
 </resources>
