Changed Sharkvert.png to be larger and well placed. Deleted main.xml and changed the name of activity_continue_to_split to main.xml. Also changed the strings.xml for better button names and button text. And the AndroidManifest.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="n_people">And How Many People Are Sharing The Burden: </string>
     <string name="split_now">Split Now</string>
     <string name="title_activity_continue_to_split">ContinueToSplit</string>
-    <string name="even_split">Split Evenly</string>
-    <string name="proceed_to_checkout">Proceed to Checkout</string>
+    <string name="sharkSplit">Shark Split</string>
+    <string name="buttonBlood">Draw Blood</string>
 </resources>
