--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="title_activity_continue_to_split">ContinueToSplit</string>
     <string name="sharkSplit">Shark Split</string>
     <string name="buttonBlood">Draw Blood</string>
+    <string name="even_split">Even Split</string>
+    <string name="split_intro">Welcome to Split</string>
 </resources>
