--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="email_address">Email Address</string>
     <string name="launch_contacts">Browse Contacts</string>
     <string name="title_activity_launch_contact">LaunchContact</string>
+
+    <item name="RowText1" type="id" />
+    <item name="RowText2" type="id" />
 </resources>
