Changed the way of doing contacts. Pull all from the list and ask user to select. Have some problems, including trying to add null pointer at line 163 in SharkSplit. Biggest problem would be not able to access a text dynamically.
- June 15: fixed Contact list. Will be working on displaying this list as a fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
 
     <item name="RowText1" type="id" />
     <item name="RowText2" type="id" />
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
