Changed the way of doing contacts. Pull all from the list and ask user to select. Have some problems, including trying to add null pointer at line 163 in SharkSplit. Biggest problem would be not able to access a text dynamically.
- June 15: fixed Contact list. Will be working on displaying this list as a fragment.
- June 16: erased Fragment off my mind, changes to a popup window
- June 19: tweaked some functionality, changed a few outlook on buttons and etc. Will start a full launch refactoring and clean up section.
- June 22: had enough with contactlist.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="email_address">Email Address</string>
-    <string name="launch_contacts">Browse Contacts</string>
+    <string name="contact_name">Name</string>
+    <string name="contact_phone">Phone Number</string>
+    <string name="contact_add">+</string>
     <string name="title_activity_launch_contact">LaunchContact</string>
 
     <item name="RowText1" type="id" />
