Changed the way of doing contacts. Pull all from the list and ask user to select. Have some problems, including trying to add null pointer at line 163 in SharkSplit. Biggest problem would be not able to access a text dynamically.
- June 15: fixed Contact list. Will be working on displaying this list as a fragment.
- June 16: erased Fragment off my mind, changes to a popup window
- June 19: tweaked some functionality, changed a few outlook on buttons and etc. Will start a full launch refactoring and clean up section.
- June 22: had enough with contactlist.
- June 23: fix applied to ContineToSplit class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="split_now">Split Now</string>
     <string name="sharkSplit">Shark Split</string>
     <string name="buttonBlood">Draw Blood</string>
-    <string name="even_split">Even Split</string>
     <string name="split_intro">Welcome to Split</string>
     <string name="continueToSplit">Continue to Split</string>
     <string name="title_activity_proceed_to_checkout">ProceedToCheckout</string>
+    <string name="proceed_to_checkout">Proceed To Checkout</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="email_address">Email Address</string>
@@ -18,6 +18,7 @@
     <string name="contact_phone">Phone Number</string>
     <string name="contact_add">+</string>
     <string name="title_activity_launch_contact">LaunchContact</string>
+    <string name="even_split">Even Split between Contributors</string>
 
     <item name="RowText1" type="id" />
     <item name="RowText2" type="id" />
